# juppiter

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  DESIGN.md  README.md  index.html  sitemap.xml
.github/workflows/: auto-merge.yml  ci.yml  docs.yml  sync-develop.yml
architecture/: index.html
architecture/compute-profiles/: index.html
architecture/fusion-core/: index.html
architecture/interfaces/: index.html
architecture/overview/: index.html
architecture/sensor-core/: index.html
config/: euroc_cam.yaml
config/compute_profiles/: dev.yaml  edge.yaml  low_power.yaml
config/fusion/: health_thresholds.yaml  weights_nominal.yaml
config/perception/: system.yaml
config/sensors/: simulated_imu.yaml  simulated_livox.yaml  simulated_stereo.yaml
development/: index.html
development/ci-cd/: index.html
development/contributing/: index.html
development/testing/: index.html
development/troubleshooting/: index.html
docker/: Dockerfile.dev  docker-compose.yml  entrypoint.sh
docs/: README.md  mkdocs.yml  requirements.txt
docs/architecture/: compute-profiles.md  fusion-core.md
docs/development/: contributing.md
docs/docs/: index.md
docs/getting-started/: installation.md
docs/reference/: index.md
docs/user-guides/: fdiir-testing.md
getting-started/: index.html
getting-started/installation/: index.html
getting-started/running-simulation/: index.html
launch/: replay.launch.py
reference/: index.html
reference/configuration-reference/: index.html
reference/package-overview/: index.html
reference/ros-topics/: index.html
scripts/: download_euroc.sh  setup_openvins.sh
search/: search_index.json
src/common_msgs/: CMakeLists.txt  package.xml
src/common_msgs/msg/: Detection2D.msg  Detection2DArray.msg  ObjectResult.msg  PerceptionHealth.msg
src/common_msgs/srv/: GetPerceptionHealth.srv  QueryObjects.srv
src/common_msgs/test/: test_perception_health.cpp
src/euroc_provider/: CMakeLists.txt  euroc_driver_plugin.xml  package.xml
src/euroc_provider/include/euroc_provider/: euroc_driver.hpp  euroc_reader.hpp  stereo_depth.hpp
src/euroc_provider/src/: euroc_driver.cpp  euroc_reader.cpp  stereo_depth.cpp
src/fusion_core/: CMakeLists.txt  package.xml
src/fusion_core/include/fusion_core/: fusion_engine.hpp  health_client.hpp  mode_manager.hpp
src/fusion_core/src/: fusion_engine.cpp  fusion_node.cpp  health_client.cpp  mode_manager.cpp  weight_calculator.cpp
src/fusion_core/test/: mock_service_client.hpp  test_health_client.cpp  test_mode_manager.cpp
src/gazebo_lunar_sim/: CMakeLists.txt  package.xml
src/gazebo_lunar_sim/config/: bridge.yaml  simulation.yaml
src/gazebo_lunar_sim/launch/: simulation.launch.py
src/gazebo_lunar_sim/models/: .gitkeep
src/gazebo_lunar_sim/urdf/: rover.urdf.xacro
src/gazebo_lunar_sim/worlds/: lunar_flat.sdf
src/juppiter_integration_tests/: CMakeLists.txt  package.xml
src/juppiter_integration_tests/config/: lidar_dropout.yaml
src/juppiter_integration_tests/launch/: fdiir_scenario.launch.py
src/juppiter_integration_tests/src/: fault_injector.cpp  metrics_collector.cpp  scenario_loader.cpp  scenario_runner.cpp
src/juppiter_integration_tests/test/: test_fdiir_scenarios.cpp
src/kinetic_estimator/: CMakeLists.txt  package.xml
src/kinetic_estimator/config/: kinetic_estimator.yaml
src/kinetic_estimator/src/: kinetic_estimator_node.cpp
src/lio_estimators/dlio/: CMakeLists.txt  package.xml
src/lio_estimators/dlio/config/: dlio.yaml
src/lio_estimators/dlio/include/dlio/: dlio_estimator.hpp
src/lio_estimators/dlio/launch/: dlio.launch.py
src/lio_estimators/dlio/src/: dlio_estimator.cpp  dlio_node.cpp  imu.cpp  odom.cpp
src/lio_estimators/fast_lio2/: CMakeLists.txt  package.xml
src/lio_estimators/fast_lio2/config/: fast_lio2.yaml
src/lio_estimators/fast_lio2/include/fast_lio2/: fast_lio2_estimator.hpp  ikd_tree_manager.hpp  imu_processor.hpp  lidar_processor.hpp
src/lio_estimators/fast_lio2/launch/: fast_lio2.launch.py
src/lio_estimators/fast_lio2/src/: fast_lio2_estimator.cpp  fast_lio2_node.cpp  ikd_tree_manager.cpp  imu_processor.cpp  lidar_processor.cpp
src/sensor_bridge/: CMakeLists.txt  package.xml
src/sensor_bridge/include/sensor_bridge/: sensor_bridge_node.hpp
src/sensor_bridge/src/: euroc_reader.cpp  euroc_reader.hpp  main.cpp  sensor_bridge_node.cpp  stereo_depth.cpp  stereo_depth.hpp
src/sensor_core/: CMakeLists.txt  package.xml
src/sensor_core/include/sensor_core/: health_monitor.hpp  sensor_bridge_node.hpp  time_synchronizer.hpp
src/sensor_core/src/: health_monitor.cpp  main.cpp  sensor_bridge_node.cpp  time_synchronizer.cpp
src/sensor_core/test/: mock_sensor_driver.hpp  test_health_monitor.cpp
src/sensor_interfaces/: CMakeLists.txt  package.xml
src/sensor_interfaces/include/sensor_interfaces/: sensor_driver.hpp  time_sync_types.hpp
src/vio_estimators/openvins/: CMakeLists.txt  package.xml
src/vio_estimators/openvins/config/: camera_simulation.yaml  openvins.yaml  openvins_simulation.yaml
src/vio_estimators/openvins/include/openvins/: openvins_adapter.hpp  openvins_estimator.hpp
src/vio_estimators/openvins/launch/: openvins.launch.py
src/vio_estimators/openvins/src/: openvins_adapter.cpp  openvins_estimator.cpp  openvins_node.cpp
src/vio_estimators/openvins/src/ov_core/: features.cpp  trackers.cpp
src/vio_estimators/openvins/src/ov_msckf/: state.cpp  update.cpp
src/vio_estimators/orb_slam3/: CMakeLists.txt  package.xml
src/vio_estimators/orb_slam3/config/: orb_slam3.yaml
src/vio_estimators/orb_slam3/include/orb_slam3/: orb_slam3_estimator.hpp
src/vio_estimators/orb_slam3/launch/: orb_slam3.launch.py
src/vio_estimators/orb_slam3/src/: orb_slam3_estimator.cpp  orb_slam3_node.cpp
src/vio_estimators/orb_slam3/src/slam/: atlas.cpp  local_mapping.cpp  loop_closing.cpp  tracking.cpp  visual_odometry.cpp
src/vio_estimators/vio_estimator_interfaces/: CMakeLists.txt  package.xml
src/vio_estimators/vio_estimator_interfaces/include/vio_estimator_interfaces/: vio_estimator.hpp
user-guides/: index.html
(+36 files in other folders)
