<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- About: Package manifest for custom message and service definitions. -->
<package format="3">
  <name>common_msgs</name>
  <version>0.1.0</version>
  <description>Custom message and service definitions for juppiter.</description>
  <maintainer email="peter@arconiclabs.com">peter@arconiclabs.com</maintainer>
  <license>todo</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
