<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fast_lio2</name>
  <version>0.1.0</version>
  <description>FAST-LIO2 LiDAR-Inertial Odometry wrapper for juppiter dev tier</description>
  <maintainer email="dev@arconic.ai">Arconic Labs</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>lio_estimator_interfaces</depend>
  <!-- livox_ros_driver2 is optional runtime dependency for Livox LiDARs -->
  <!-- Not required for build; supports any point cloud source -->

  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
