<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orb_slam3</name>
  <version>0.1.0</version>
  <description>ORB-SLAM3 stereo-inertial VIO for juppiter dev tier</description>
  <maintainer email="dev@arconic.ai">Arconic Labs</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>vio_estimator_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <!-- Pangolin is optional - for visualization only -->
  <!-- <build_depend>libpangolin-dev</build_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
